# satformer

./: .gitignore  README.md  _dataset_stats.ipynb  _test.sh  _train.sh  _weights.ipynb  dataset_stats.ipynb  demo.ipynb  dl_data.sh  eval.py  main.py  plot.ipynb  pyproject.toml  readme.md  test.py  train.py  train_lightning.py  y_reg_norms.pth
assets/: high_rain_event.pth
configs/: eval.yaml  test.json  test_categorical.json  train.json  train.yaml
configs/model-configs/: 001_classic_img_sr-2x-sr64.yaml  001_classic_img_sr-4x-s64.yaml  001_classic_img_sr-8x-s48.yaml  001_classic_img_sr-8x-s64.yaml  004_grayscale_dn_swinir.yaml
configs/timesformer/: train_categorical.json
configs/timesformer-bl/: train.json  train_categorical.json  train_regression.json  train_regression_freq_weighted_l1.json  train_regression_weighted_l1.json
configs/train-configs/: eval_older_surrogate_standalone.yaml  expert_surrogate.yaml  train_controlnet_uncond.yaml
docs/: lightning_training.md
notebooks/: _dataset_stats.ipynb  _explore.ipynb  buckets.ipynb  categorical_variation.ipynb  dataset_stats.ipynb  explore.ipynb
scripts/: _test.sh  _train.sh  train.py  train_simple.py
src/dataloader/: challenge_one_dataloader.py  dataset_stats.py  magic.py
src/latte_repro/: encoder.py  rules.txt
src/model/: toy.py
src/model/SaTformer/: SaTformer.py  rotary.py
src/util/: config.py  eval_metrics.py  logger.py  loss.py  material_property_eval.py  metrics.py  moment_based.py  scale.py  torch_helpers.py
wandb/: latest-run
wandb/run-20251024_171731-q5fko2sk/: run-q5fko2sk.wandb
(+11 files in other folders)
